@@ -1,13 +1,6 @@
 # puppet-puppet
 
-This is a small puppet module to configure Puppet. It is roughly based on the [puppetlabs-operations](http://github.com/puppetlabs-operations/puppet-puppet) module.
-
-To configure the Puppet Master with Nginx, you'll need the following modules:
-
-* [jtopjian/nginx](https://github.com/jtopjian/puppet-nginx)
-* [jtopjian/unicorn](https://github.com/jtopjian/puppet-unicorn)
-
-Or to configure the Puppet Master to be hosted through Passenger, you'll need the [puppetlabs/apache](https://github.com/puppetlabs/puppetlabs-apache) module.
+Installs and configures Puppet agent and Puppet-server
 
 ## Usage
 
@@ -17,25 +10,21 @@ This module takes advantage of the new iteration features of Puppet 3.2, so you 
 parser = future
 ```
 
-The three main classes, `init`, `agent`, and `master` require a `settings` parameter. This parameter is a nested key/value hash of settings that go in `puppet.conf`. For example:
+To begin, place something similar to the following in Hiera:
 
 ```yaml
-# puppet.confg [main] settings
-puppet::settings:
+site::puppet::puppet_package_ensure: 'latest'
+site::puppet::server_package_ensure: 'latest'
+site::puppet::settings::main:
+  server: 'puppet'
+  parser: 'future'
+  ordering: 'manifest'
+  pluginsync: true
   logdir: '/var/log/puppet'
   vardir: '/var/lib/puppet'
   ssldir: '/var/lib/puppet/ssl'
   rundir: '/var/run/puppet'
-  parser: 'future'
-  evaluator: 'current'
-  ordering: 'manifest'
-  environmentpath: '$confdir/environments'
-  server: 'puppet.z.terrarum.net'
-  ca_server: 'puppet.z.terrarum.net'
-  report_server: 'puppet.z.terrarum.net'
-  pluginsync: true
-# puppet.conf [agent] settings
-puppet::agent::settings:
+site::puppet::settings::agent:
   certname: "%{::fqdn}"
   show_diff: true
   splay: false
@@ -43,23 +32,63 @@ puppet::agent::settings:
   usecacheonfailure: true
   report: true
   environment: "%{::environment}"
-# puppet.conf [master] settings
-puppet::master::settings:
+site::puppet::settings::server_default:
+  JAVA_ARGS: '-Xms1g -Xmx1g -XX:MaxPermSize=256m'
+site::puppet::settings::master:
   ca: true
-# puppet master configuration
-puppet::master::servertype: 'passenger'
+  ssldir: '/var/lib/puppet/ssl'
+puppetdb::master::config::restart_puppet: false
 ```
 
-Then to configure a server as a Puppet Master, create a class like this:
+Next, create a profile for the Puppet server:
 
 ```puppet
-class site::roles::puppet::master {
-  include ::apache
-  include ::apache::mod::ssl
-  include ::apache::mod::passenger
-  include ::puppet
-  include ::puppet::master
-  include ::puppetdb
-  include ::puppetdb::master::config
+class site::profiles::puppet::server {
+
+  # Hiera
+  $main_settings           = hiera('site::puppet::settings::main')
+  $agent_settings          = hiera('site::puppet::settings::agent')
+  $master_settings         = hiera('site::puppet::settings::master')
+  $server_default_settings = hiera('site::puppet::settings::server_default')
+  $puppet_package_ensure   = hiera('site::puppet::puppet_package_ensure')
+  $server_package_ensure   = hiera('site::puppet::server_package_ensure')
+
+  # Resources
+  class { '::puppet':
+    server                  => true,
+    main_settings           => $main_settings,
+    agent_settings          => $agent_settings,
+    master_settings         => $master_settings,
+    server_default_settings => $server_default_settings,
+    puppet_package_ensure   => $server_package_ensure,
+  }
+
+  class { 'puppetdb': }
+  class { 'puppetdb::master::config':
+    restart_puppet => false,
+  }
+
 }
 ```
+
+Then create a profile for the agents:
+
+```puppet
+class site::profiles::puppet::agent {
+
+  # Hiera
+  $main_settings           = hiera('site::puppet::settings::main')
+  $agent_settings          = hiera('site::puppet::settings::agent')
+  $puppet_package_ensure   = hiera('site::puppet::puppet_package_ensure')
+
+  # Resources
+  class { '::puppet':
+    main_settings         => $main_settings,
+    agent_settings        => $agent_settings,
+    puppet_package_ensure => $server_package_ensure,
+  }
+
+}
+```
+
+Finally, apply either the `server` profile or `agent` profile to the roles that require them.
